fix(slider): Remove margin block and align labels for vertical

--- a/style-bootstrap/scss/_variables.scss
+++ b/style-bootstrap/scss/_variables.scss
@@ -8,7 +8,6 @@ $slider-margin-block-start: 2rem !default;
 $slider-margin-block-end: 1rem !default;
 $slider-vertical-margin-inline-start: 1rem !default;
 $slider-vertical-margin-inline-end: 3rem !default;
-$slider-vertical-margin-block: 3rem !default;
 $slider-translate-vertical: translate(-40%, -50%) !default;
 $slider-translate-horizontal: translate(-50%, -40%) !default;
 $focus-ring-opacity: 0.25 !default;
@@ -28,7 +27,8 @@ $slider-label-min-left: 0;
 $slider-label-max-right: 0;
 $slider-label-now-transform: translateX(-50%) !default;
 $slider-label-vertical-margin-inline-start: 1rem !default;
-$slider-label-vertical-transform: translateY(-40%) !default;
+$slider-label-vertical-min-transform: translateY(-75%) !default;
+$slider-label-vertical-max-transform: translateY(-25%) !default;
 $slider-label-vertical-white-space: nowrap !default;
 $slider-label-vertical-min-top: 100% !default;
 $slider-label-vertical-max-top: 0% !default;
